@startuml
'https://plantuml.com/class-diagram

abstract class XoSo{
    String tenGiai
    List<String> boSoTrungThuong
    + {abstract} XoSo thietLapKeTiep(XoSo k)
    + {abstract} String doVeSo(String veSo)
}

class GiaiThapNhat

class GiaiThuong


XoSo<|--GiaiThapNhat
XoSo<|--GiaiThuong
XoSo<--GiaiThuong:keTiep

@enduml